# pong-ai

./: CMakeLists.txt  README.md  main.cpp
agent/: Agent.cpp  Agent.h
game/: Arena.cpp  Arena.h  Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  main.cpp
neural/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h
